--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,69 @@
-body {
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: var(--background-color);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.app {
+  margin: 0 auto;
+  padding: 0 auto;
+  width: 100%;
+  max-width: 1200px;
+}
+
+:root {
+  --background-color: #F5F5F5;
+  --text-color: #000000;
+
+  --post-bg-color: #ffffff;
+  --post-border-color: #000000;
+  --post-text-color: #000000;
+
+  --delete-btn-bg-color: #F7CECC;
+  --delete-btn-border-color: #D3B2B5;
+
+  --primary-btn-bg-color: #D9E8FB;
+  --primary-btn-bg-color-hover: #cee4ff;
+  --primary-btn-border-color: #BDCBDB;
+}
+
+button {
+  outline: none;
+
+  border: 1px solid var(--primary-btn-border-color);
+  box-shadow: none;
+  background: var(--primary-btn-bg-color);
+  padding: 5px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+a,
+a:hover {
+  text-decoration: none;
+  color: var(--text-color);
+
+}
+
+@media (max-width: 1200px) {
+  .app {
+    margin: 0 auto;
+    padding: 0 30px;
+    width: 100vw;
+  }
 }
