--- a/src/components/common/Modal/modal.scss
+++ b/src/components/common/Modal/modal.scss
@@ -23,8 +23,10 @@
   border: 1px solid var(--border-color);
   background-color: var(--background-color);
   z-index: 2;
-  width: 70vw;
-  max-height: 80vh;
+  width: 50vw;
+  min-width: 310px;
+  height: 70vh;
+  min-height: 350px;
 
   transition: 0.4s;
   position: relative;
