--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@ code {
   --background-color: #F5F5F5;
   --text-color: #000000;
   --border-color: #000000;
+  --input-bg-color: #ffffff;
 
   --post-bg-color: #ffffff;
   --post-border-color: #000000;
@@ -52,7 +53,14 @@ button {
   padding: 5px;
   border-radius: 3px;
   cursor: pointer;
+
+
 }
+
+button:hover {
+  background: var(--primary-btn-bg-color-hover);
+}
+
 
 a,
 a:hover {
@@ -67,4 +75,14 @@ a:hover {
     padding: 0 30px;
     width: 100vw;
   }
+}
+
+input:focus,
+textarea:focus {
+  outline: none;
+
+}
+
+textarea {
+  resize: none;
 }
